# GoIT-python

./: README.md
FinalProject/: AddressBook.py  Bot.py  __main__.py  application.logs  logger.py  pyproject.toml
FinalProject/FinalProject/: application.logs  pyproject.toml
HW_10/: hw_10.py
HW_11/: hw_11.py
HW_12/: hw_12.py  hw_12v2.py
HW_2_1/: task_2.1.py  task_2.2.py
HW_6/: sort_dir.py
HW_6_core/: sort_dir.py
HW_7/clean_folder/: README.md  setup.py
HW_8/: bday_greeting.py
HW_9/: simple_assistant.py  simple_assistant_v2.py
currency_request/: README.md  curr_app.py
currency_requests/currency_exch_cli/: curr_app.py
currency_requests/currency_exch_webchat/: README.md  curr_app_.py  file.txt
hw_10_web/: README.md  requirements.txt
hw_11_web/: main.py
hw_11_web/src/: schemas.py
hw_12_web/: README.md  main.py
hw_12_web/src/: schemas.py
hw_13_web_FastAPI/: README.md  main.py
hw_13_web_django/: .gitignore  README.md  requirements.txt
hw_13_web_django/quotes_app/: manage.py
hw_14_web_FastAPI/: docker-compose.yml  requirements.txt
hw_14_web_FastAPI/docs/: conf.py  index.rst
hw_14_web_FastAPI/src/: schemas.py
hw_14_web_FastAPI/tests/: conftest.py  test_pytest_route_users.py  test_unit_repo_contacts.py  test_unit_repo_users.py
hw_6/: pyproject.toml
hw_6/hw_6/: connect.py  fill_data.py  init_tables.py  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  tables.sql
hw_7_web/: README.md  pyproject.toml
hw_7_web/hw_7_web/: config.ini  main.py  my_select.py  seeds.py
hw_7_web/hw_7_web/alembic/versions/: 991231a8ed0b_init.py
hw_7_web/hw_7_web/database/: CRUD.py  db.py  models.py
hw_8_web/: pyproject.toml
hw_8_web/task1/: authors.json  config.ini  connect.py  models.py  quotes_finder.py  seeds.py
hw_8_web/task2/: config.ini  consumer_email.py  consumer_sms.py  models.py  producer.py
hw_9_web/: config.ini  main.py  pyproject.toml  seeds.py
web_app/: Dockerfile  _app_.py  index.html  message.html  pyproject.toml
web_hw_m3/task#1/: file_sorter_in_thr.py
web_hw_m3/task#2/: clean_fn.py  factorize_in_proc_Manager.py  (+2 more)
(+86 files in other folders)
