[tool.poetry]
name = "final-my"
version = "0.1.0"
description = "blah-blah"
authors = ["rnebesnyuk <estebanius1985@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "final_my"}]

[tool.poetry.dependencies]
python = "3.10.4"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
